Fixed sticky and overflow issue

--- a/stylesheets/components/header.scss
+++ b/stylesheets/components/header.scss
@@ -28,14 +28,17 @@
 /*---------------------------Background Image*/
 /* Backgroud image. Free for commercial use from https://pixabay.com/photos/city-frankfurt-cityscape-skyscraper-3660779/ */
 #landing-picture {
-  background:url("/ms2-idest/assests/images/newyork.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  min-height: 300px;
-  transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
+    background:url("/../../assests/images/newyork.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 250px;
+    @media (min-width: $small-screen) {
+            height: 400px;
+        }
+    transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
 }
