--- a/stylesheets/globals/globals.scss
+++ b/stylesheets/globals/globals.scss
@@ -1,14 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-html {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  overflow-x: hidden;
-}
 body {
   font-family: 'Montserrat', sans-serif;
-  overflow-x: hidden;
 }
 .container-fluid {
   padding: 0;
